# calendarium

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
docs/: egui-vs-gpui.md
src/: calendar.rs  icon.rs  main.rs
