[package]
name = "calendarium"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.29"
chrono = "0.4"
tray-icon = "0.19"
# Pour générer l'icône dynamiquement (le chiffre du jour)
image = { version = "0.25", default-features = false }
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.build-dependencies]
# LSUIElement = pas d'icône dans le Dock
cc = "1"

[package.metadata.bundle]
name = "Calendarium"
identifier = "fr.marels.calendarium"
osx_info_plist_exts = ["LSUIElement=true"]
